Notif updates. Fixed alignments

--- a/css/dashboard.css
+++ b/css/dashboard.css
@@ -148,7 +148,7 @@ hr {
 .pending__box {
   display: flex;
   flex-direction: column;
-  gap: 2rem;
+  gap: 1rem;
   height: 30rem;
   overflow-y: scroll;
   padding: 0 2rem 0 0;
